Fix inalign numbers

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 
 :root {
 	font-family: "Raleway", system-ui, sans-serif;
+    font-variant-numeric: lining-nums;
+    font-feature-settings:"lnum" 1;
 }
 
 @layer utilities {
